@@ -38,7 +38,7 @@ import org.springframework.core.io.Resource;
 import org.springframework.core.io.support.ResourcePatternResolver;
 import org.springframework.osgi.context.BundleContextAware;
 import org.springframework.osgi.context.ConfigurableOsgiBundleApplicationContext;
-import org.springframework.osgi.context.internal.classloader.AopClassLoaderFactory;
+import org.springframework.osgi.context.internal.classloader.ClassLoaderFactory;
 import org.springframework.osgi.context.support.internal.OsgiBundleScope;
 import org.springframework.osgi.io.OsgiBundleResource;
 import org.springframework.osgi.io.OsgiBundleResourcePatternResolver;
@@ -418,6 +418,6 @@ public abstract class AbstractOsgiBundleApplicationContext extends AbstractRefre
 	 * @return
 	 */
 	private ClassLoader createBundleClassLoader(Bundle bundle) {
-		return AopClassLoaderFactory.getBundleClassLoaderFor(bundle);
+		return ClassLoaderFactory.getBundleClassLoaderFor(bundle);
 	}
 }
